--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,3 @@
-<section id="container" class="">
-
+<section id="container" class="chat-container">
+    <router-outlet></router-outlet>
 </section>
