--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -508,7 +508,7 @@ body {
 #frame .content {
     float: right;
     width: 60%;
-    height: 100%;
+    /*height: 100%;*/
     overflow: hidden;
     position: relative;
 }
