front: all save

--- a/front/src/app/modules/main/layout/layout.component.html
+++ b/front/src/app/modules/main/layout/layout.component.html
@@ -28,7 +28,7 @@
       <input type="text" placeholder="Search contacts...">
     </div>
 
-    <contact-panel></contact-panel>
+    <!--<contact-panel></contact-panel>-->
 
     <div id="bottom-bar">
       <button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
@@ -36,5 +36,5 @@
     </div>
   </div>
 
-  <chat-panel></chat-panel>
+  <!--<chat-panel></chat-panel>-->
 </div>
