--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -683,3 +683,11 @@ body {
 app-root{
     width: 100%;
 }
+
+
+@media (min-width: 992px) {
+    .container {
+        width: 100%;
+        max-width: 100%;
+    }
+}
