--- a/front/src/app/modules/guest/components/home-part.component.html
+++ b/front/src/app/modules/guest/components/home-part.component.html
@@ -1,14 +1,28 @@
-<div class="content full-content">
-    <div class="section-title">
-        <img src="http://emilcarlsson.se/assets/harveyspecter.png" class="avatar" alt="">
-        <p>Guest</p>
-        <!--<div class="social-media">-->
-            <!--<i class="fa fa-facebook" aria-hidden="true"></i>-->
-            <!--<i class="fa fa-twitter" aria-hidden="true"></i>-->
-            <!--<i class="fa fa-instagram" aria-hidden="true"></i>-->
-        <!--</div>-->
+<div class="container-fluid">
+    <div class="row section-title">
+        <div class="container">
+            <div class="col-sm-12">
+                <a class="navbar-brand">ChatRoom</a>
+                <!--<img src="http://emilcarlsson.se/assets/harveyspecter.png" class="avatar" alt="">-->
+                <!--<p>Guest</p>-->
+                <!--<div class="social-media">-->
+                <!--<i class="fa fa-facebook" aria-hidden="true"></i>-->
+                <!--<i class="fa fa-twitter" aria-hidden="true"></i>-->
+                <!--<i class="fa fa-instagram" aria-hidden="true"></i>-->
+                <!--</div>-->
+
+            </div>
+        </div>
     </div>
-    <div class="section-body">
-        <!--e6eaea-->
+    <div class="row section-body">
+        <div class="container">
+            <div class="col-sm-12">
+                <div class="home-instruction">
+                    <span class="title">Інструкція</span>
+                    <p>Опис сайту</p>
+                    <p>Опис сайту 1</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
