--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -2,4 +2,5 @@
 @import "./css/bootstrap-reboot.css";
 @import "./css/bootstrap.min.css";
 @import "./css/font-awesome.css";
+@import "./css/bucket-style.css";
 @import "./css/style.css";
