--- a/front/src/app/modules/guest/components/home-part.component.html
+++ b/front/src/app/modules/guest/components/home-part.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row section-title">
+    <div class="row section-title top-nav">
         <div class="container">
             <div class="col-sm-12">
                 <a class="navbar-brand">ChatRoom</a>
@@ -11,6 +11,7 @@
                 <!--<i class="fa fa-instagram" aria-hidden="true"></i>-->
                 <!--</div>-->
 
+                <auth-panel></auth-panel>
             </div>
         </div>
     </div>
@@ -19,8 +20,8 @@
             <div class="col-sm-12">
                 <div class="home-instruction">
                     <span class="title">Інструкція</span>
-                    <p>Опис сайту</p>
-                    <p>Опис сайту 1</p>
+                    <p>Авторизуйтесь для продовження роботи.</p>
+                    <p>Далі все найцікавіше...</p>
                 </div>
             </div>
         </div>
