--- a/front/src/app/modules/shared/components/auth/auth.component.html
+++ b/front/src/app/modules/shared/components/auth/auth.component.html
@@ -1,24 +1,15 @@
 <ul class="nav pull-right top-menu">
-  <li>
-    <input type="text" class="form-control search" placeholder=" Search">
-  </li>
+  <!--<li>-->
+    <!--<input type="text" class="form-control search" placeholder=" Search">-->
+  <!--</li>-->
   <!-- user login dropdown start-->
   <li class="dropdown">
-    <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-      <img alt="" src="images/avatar1_small.jpg">
-      <span class="username">John Doe</span>
-      <b class="caret"></b>
-    </a>
-    <ul class="dropdown-menu extended logout">
-      <li><a href="#"><i class=" fa fa-suitcase"></i>Profile</a></li>
-      <li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
-      <li><a href="login.html"><i class="fa fa-key"></i> Log Out</a></li>
-    </ul>
-  </li>
-  <!-- user login dropdown end -->
-  <li>
-    <div class="toggle-right-box">
-      <div class="fa fa-bars"></div>
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">Action</a>
+      <a class="dropdown-item" href="#">Another action</a>
+      <a class="dropdown-item" href="#">Something else here</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">Separated link</a>
     </div>
-  </li>
 </ul>
