--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -3,4 +3,6 @@
 @import "./css/bootstrap.min.css";
 @import "./css/font-awesome.css";
 @import "./css/bucket-style.css";
+/*@import "./css/modal.sass";*/
+@import "./css/modal.css";
 @import "./css/style.css";
