change modal dialogs

--- a/front/src/app/modules/guest/layout/guest.component.html
+++ b/front/src/app/modules/guest/layout/guest.component.html
@@ -1,6 +1,5 @@
 <div class="chat-module">
   <home-part></home-part>
-  <auth-panel></auth-panel>
-</div>
 
-<router-outlet></router-outlet>
+  <modal-dialogs></modal-dialogs>
+</div>
