--- a/front/src/app/modules/shared/components/check-in/check-in.component.css
+++ b/front/src/app/modules/shared/components/check-in/check-in.component.css
@@ -1,25 +1,19 @@
+.section-title {
+  height: 8vh;
+  line-height: 60px;
+  background: #f5f5f5; }
 
-.section-title{
-    height: 8vh;
-    line-height: 60px;
-    background: #f5f5f5;
-}
+.section-body {
+  background: #e6e6e6;
+  height: 92vh; }
 
-.section-body{
-    background: #e6e6e6;
-    height: 92vh;
-}
-.full-content{
-    height: 100vh;
-}
+.full-content {
+  height: 100vh; }
 
-.avatar{
-    width: 40px;
-    border-radius: 50%;
-    float: left;
-    margin: 9px 12px 0 9px;
-}
+.avatar {
+  width: 40px;
+  border-radius: 50%;
+  float: left;
+  margin: 9px 12px 0 9px; }
 
-.home-instruction{
-
-}
+/*# sourceMappingURL=check-in.component.css.map */
