--- a/front/src/app/modules/shared/components/sign-in/sign-in.component.html
+++ b/front/src/app/modules/shared/components/sign-in/sign-in.component.html
@@ -1,29 +1,3 @@
-<div class="container-fluid">
-    <div class="row section-title top-nav">
-        <div class="container">
-            <div class="col-sm-12">
-                <a class="navbar-brand">ChatRoom</a>
-                <!--<img src="http://emilcarlsson.se/assets/harveyspecter.png" class="avatar" alt="">-->
-                <!--<p>Guest</p>-->
-                <!--<div class="social-media">-->
-                <!--<i class="fa fa-facebook" aria-hidden="true"></i>-->
-                <!--<i class="fa fa-twitter" aria-hidden="true"></i>-->
-                <!--<i class="fa fa-instagram" aria-hidden="true"></i>-->
-                <!--</div>-->
-
-                <auth-panel></auth-panel>
-            </div>
-        </div>
-    </div>
-    <div class="row section-body">
-        <div class="container">
-            <div class="col-sm-12">
-                <div class="home-instruction">
-                    <span class="title">Інструкція</span>
-                    <p>Авторизуйтесь для продовження роботи.</p>
-                    <p>Далі все найцікавіше...</p>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="container-sign-in">
+    sign in
 </div>
