--- a/front/src/app/modules/shared/components/modal-dialogs/components/authentication/authentication-dialog.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/components/authentication/authentication-dialog.component.html
@@ -1,14 +1,16 @@
 <div class="modal-header">
-    <div class="flex">
-        <div (click)="openTab(CurrentPanel.SignIn)">
-            Авторизаціція
+    <div class="d-flex justify-content-between flex-row w-100">
+        <div class="d-flex"
+             (click)="openTab(CurrentPanel.SignIn)">
+            Авторизація
         </div>
-        <div (click)="openTab(CurrentPanel.CheckIn)">
+        <div class="d-flex"
+             (click)="openTab(CurrentPanel.CheckIn)">
             Реєстрація
         </div>
     </div>
 </div>
 <div class="modal-body">
-    <sign-in></sign-in>
-    <check-in></check-in>
+    <sign-in *ngIf="mode == CurrentPanel.SignIn"></sign-in>
+    <check-in *ngIf="mode == CurrentPanel.CheckIn"></check-in>
 </div>
