--- a/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
@@ -1,9 +1,9 @@
 <div id="modal-container">
     <modal id="custom-modal-1">
         <div class="modal">
-            <div class="modal-wrapper">
+            <div class="modal-wrapper auth-container">
                 <button class="close-icon"
-                        (click)="closeModal('custom-modal-1');">Close</button>
+                        (click)="closeModal('custom-modal-1');"> <fa-icon [icon]="faTimes"></fa-icon></button>
 
                 <authentication-dialog></authentication-dialog>
 
