--- a/front/src/app/modules/shared/components/sign-in/sign-in.component.html
+++ b/front/src/app/modules/shared/components/sign-in/sign-in.component.html
@@ -1,3 +1,35 @@
 <div class="container-sign-in">
-    sign in
+    <div *ngIf="message" [innerText]="message"></div>
+    <form [formGroup]="userForm" (ngSubmit)="submitForm()">
+        <div [class]="'form-group'+ (emailField.errors && emailField.errors.message ? 'has-danger' : '')">
+            <label for="Email"
+                   class="form-control-label">Email:</label>
+            <input type="email"
+                   class="form-control"
+                   id="Email"
+                   #emailField
+                   placeholder="email"
+                   formControlName="email">
+            <div *ngIf="userForm.controls['email'].errors && userForm.controls['email'].errors.message"
+                 class="invalid-feedback form-control-feedback">
+                <div [innerText]="userForm.controls['email'].errors.message"></div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="form-control-label"
+                   for="Password">Password:</label>
+            <input type="email"
+                   class="form-control"
+                   id="Password"
+                   placeholder="password"
+                   formControlName="password">
+            <div class="form-control-feedback" [innerText]="userForm.valid"></div>
+        </div>
+
+        <button class="btn btn-primary btn-sm"
+                type="submit">
+            Вхід
+        </button>
+    </form>
 </div>
