layout guest & remind password

--- a/front/src/app/modules/guest/components/layout/guest.component.html
+++ b/front/src/app/modules/guest/components/layout/guest.component.html
@@ -1,5 +1,6 @@
 <div class="chat-module">
-  <home-part></home-part>
-
   <modal-dialogs></modal-dialogs>
+
+  <home-part></home-part>
+  <remind-password></remind-password>
 </div>
