--- a/front/src/app/modules/shared/components/check-in/check-in.component.html
+++ b/front/src/app/modules/shared/components/check-in/check-in.component.html
@@ -1,3 +1,55 @@
 <div class="container-check-in">
-    check in
+    <div class="message-container"
+         *ngIf="message" [innerText]="message"></div>
+
+    <form [formGroup]="userForm"
+          #form="ngForm"
+          novalidate
+          (ngSubmit)="submitForm()">
+
+        <div [class]="'form-group'+ (emailField.errors && emailField.errors.message ? 'has-danger' : '')">
+            <label for="Email"
+                   class="form-control-label">Email:</label>
+
+            <input type="email"
+                   class="form-control"
+                   id="Email"
+                   #emailField
+                   placeholder="email"
+                   formControlName="email">
+
+            <div *ngIf="emailField.errors && emailField.errors.message"
+                 class="invalid-feedback form-control-feedback">
+                <div [innerText]="emailField.errors.message"></div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="form-control-label"
+                   for="Password">Password:</label>
+
+            <input type="email"
+                   class="form-control"
+                   id="Password"
+                   placeholder="password"
+                   formControlName="password">
+
+            <div class="form-control-feedback" [innerText]="userForm.valid"></div>
+        </div>
+
+        <div class="text-center">
+            <button class="btn btn-primary btn-sm"
+                    [disabled]="form.pristine || form.invalid"
+                    type="submit">Зареєструватися</button>
+        </div>
+    </form>
+
+    <div class="is_account small">
+        У вас уже есть аккаунт?
+        <a [routerLink]=""
+           class="under-line"
+            (click)="clickToSignIn()">Войти</a>
+    </div>
+
+
 </div>
