--- a/front/src/app/modules/shared/components/sign-in/sign-in.component.css
+++ b/front/src/app/modules/shared/components/sign-in/sign-in.component.css
@@ -1,30 +1,28 @@
+.section-title {
+  height: 8vh;
+  line-height: 60px;
+  background: #f5f5f5; }
 
-.section-title{
-    height: 8vh;
-    line-height: 60px;
-    background: #f5f5f5;
-}
+.section-body {
+  background: #e6e6e6;
+  height: 92vh; }
 
-.section-body{
-    background: #e6e6e6;
-    height: 92vh;
-}
-.full-content{
-    height: 100vh;
-}
+.full-content {
+  height: 100vh; }
 
-.avatar{
-    width: 40px;
-    border-radius: 50%;
-    float: left;
-    margin: 9px 12px 0 9px;
-}
-
-.home-instruction{
-
-}
+.avatar {
+  width: 40px;
+  border-radius: 50%;
+  float: left;
+  margin: 9px 12px 0 9px; }
 
 .has-danger .form-control-feedback,
 .has-success .form-control-feedback {
-    display: block;
-}
+  display: block; }
+
+.is-remind-password {
+  font-size: 12px; }
+  .is-remind-password a {
+    font-size: 12px; }
+
+/*# sourceMappingURL=sign-in.component.css.map */
