--- a/front/src/app/modules/shared/components/modal-dialogs/components/authentication/authentication-dialog.component.css
+++ b/front/src/app/modules/shared/components/modal-dialogs/components/authentication/authentication-dialog.component.css
@@ -1,3 +1,12 @@
+.modal-header {
+  padding: 0 !important; }
+  .modal-header .tab-title {
+    margin-bottom: -2px; }
+  .modal-header .item {
+    width: 50%;
+    justify-content: center; }
 
+.active {
+  border-bottom: 2px solid lightcoral; }
 
-/*# sourceMappingURL=authentication.component.css.map */
+/*# sourceMappingURL=authentication-dialog.component.css.map */
