--- a/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
@@ -1,6 +1,7 @@
 <div id="modal-container">
     <modal id="custom-modal-1">
-        <div class="modal">
+        <div class="modal"
+             (click)="closeModal($event, 'custom-modal-1')">
             <div class="modal-wrapper auth-container">
                 <button class="close-icon"
                         (click)="closeModal('custom-modal-1');"> <fa-icon [icon]="faTimes"></fa-icon></button>
@@ -13,8 +14,10 @@
     </modal>
 
     <modal id="RemindPassword">
-        <div class="modal">
-            <div class="modal-wrapper remind-password">
+        <div class="modal"
+             (click)="closeModal($event, 'RemindPassword')">
+            <div #modal
+                 class="modal-wrapper remind-password">
                 <button class="close-icon"
                         (click)="closeModal('RemindPassword');"> <fa-icon [icon]="faTimes"></fa-icon></button>
 
