fix close popup

--- a/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
@@ -16,8 +16,7 @@
     <modal id="RemindPassword">
         <div class="modal"
              (click)="closeModal($event, 'RemindPassword')">
-            <div #modal
-                 class="modal-wrapper remind-password">
+            <div class="modal-wrapper remind-password">
                 <button class="close-icon"
                         (click)="closeModal('RemindPassword');"> <fa-icon [icon]="faTimes"></fa-icon></button>
 
