--- a/front/src/app/modules/shared/components/check-in/check-in.component.html
+++ b/front/src/app/modules/shared/components/check-in/check-in.component.html
@@ -3,17 +3,18 @@
          *ngIf="message" [innerText]="message"></div>
 
     <form [formGroup]="userForm"
+          *ngIf="registrationIsSuccessful"
           #form="ngForm"
           novalidate
           (ngSubmit)="submitForm()">
 
         <div [class]="'form-group'+ (emailField.errors && emailField.errors.message ? 'has-danger' : '')">
-            <label for="Email"
+            <label for="CheckEmail"
                    class="form-control-label">Email:</label>
 
             <input type="email"
                    class="form-control"
-                   id="Email"
+                   id="CheckEmail"
                    #emailField
                    placeholder="email"
                    formControlName="email">
@@ -28,7 +29,7 @@
             <label class="form-control-label"
                    for="Password">Password:</label>
 
-            <input type="email"
+            <input type="password"
                    class="form-control"
                    id="Password"
                    placeholder="password"
