--- a/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
@@ -1,10 +1,11 @@
 <div id="modal-container">
-    <modal id="custom-modal-1">
+
+    <modal id="authentication">
         <div class="modal"
-             (click)="closeModal($event, 'custom-modal-1')">
+             (click)="closeModal($event, 'authentication')">
             <div class="modal-wrapper auth-container">
                 <button class="close-icon"
-                        (click)="closeModal('custom-modal-1');"> <fa-icon [icon]="faTimes"></fa-icon></button>
+                        (click)="closeModal('authentication');"> <fa-icon [icon]="faTimes"></fa-icon></button>
 
                 <authentication-dialog></authentication-dialog>
 
