--- a/front/src/app/modules/shared/components/sign-in/sign-in.component.html
+++ b/front/src/app/modules/shared/components/sign-in/sign-in.component.html
@@ -28,7 +28,7 @@
             <label class="form-control-label"
                    for="Password">Password:</label>
 
-            <input type="email"
+            <input type="password"
                    class="form-control"
                    id="Password"
                    placeholder="password"
