--- a/front/src/app/modules/shared/components/modal-dialogs/components/remind-password/remind-password-dialog.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/components/remind-password/remind-password-dialog.component.html
@@ -16,12 +16,12 @@
               (ngSubmit)="submitForm()">
 
             <div [class]="'form-group'+ (emailField.errors && emailField.errors.message ? 'has-danger' : '')">
-                <label for="Email"
+                <label for="pEmail"
                        class="form-control-label">Email:</label>
 
                 <input type="email"
                        class="form-control"
-                       id="Email"
+                       id="pEmail"
                        #emailField
                        placeholder="email"
                        formControlName="email">
