--- a/front/src/app/modules/shared/components/auth/auth.component.css
+++ b/front/src/app/modules/shared/components/auth/auth.component.css
@@ -1,3 +1,13 @@
+.top-menu .private-panel .avatar {
+  width: 32px;
+  height: 32px;
+  float: left;
+  font-size: 60%; }
 
+.nav-link {
+  display: flex;
+  align-items: center; }
+  .nav-link .text {
+    padding-left: 10px; }
 
-/*# sourceMappingURL=layout.component.css.map */
+/*# sourceMappingURL=auth.component.css.map */
