contact panel: add room

--- a/front/src/app/modules/main/components/side-part/side-part.component.css
+++ b/front/src/app/modules/main/components/side-part/side-part.component.css
@@ -16,4 +16,7 @@
   float: left;
   margin: 9px 12px 0 9px; }
 
-/*# sourceMappingURL=home-part.component.css.map */
+.side-panel {
+  padding-bottom: 40px; }
+
+/*# sourceMappingURL=side-part.component.css.map */
