--- a/front/src/app/modules/shared/components/modal-dialogs/components/remind-password/remind-password-dialog.component.css
+++ b/front/src/app/modules/shared/components/modal-dialogs/components/remind-password/remind-password-dialog.component.css
@@ -5,4 +5,4 @@
   height: 55px;
   line-height: 55px; }
 
-/*# sourceMappingURL=remind-password-dialog.component.css.map */
+/*# sourceMappingURL=room-dialog.component.cssap */
