--- a/front/src/app/modules/main/components/side-part/side-part.component.html
+++ b/front/src/app/modules/main/components/side-part/side-part.component.html
@@ -1,15 +1,14 @@
 <div id="sidepanel" class="side-panel">
     <profile-part></profile-part>
-
+    <contact-panel></contact-panel>
     <!--<div id="search">-->
         <!--<label for=""><i class="fa fa-search" aria-hidden="true"></i></label>-->
         <!--<input type="text" placeholder="Search contacts...">-->
     <!--</div>-->
 
-    <!--<contact-panel></contact-panel>-->
 
-    <!--<div id="bottom-bar">-->
-        <!--<button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>-->
-        <!--<button id="settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Settings</span></button>-->
-    <!--</div>-->
+    <div id="bottom-bar" class="group-btn ">
+        <button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
+        <button id="settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Settings</span></button>
+    </div>
 </div>
