--- a/front/src/app/modules/shared/components/auth/auth.component.scss
+++ b/front/src/app/modules/shared/components/auth/auth.component.scss
@@ -1,10 +1,19 @@
 .top-menu{
   .private-panel{
+    display: flex;
+    height: 100%;
+
     .avatar{
       width: 32px;
       height: 32px;
       float: left;
       font-size: 60%;
+    }
+
+    a.dropdown-item{
+        display: flex;
+        height: 30px;
+        align-items: center;
     }
   }
 }
