--- a/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/modal-dialogs.component.html
@@ -27,4 +27,17 @@
         </div>
         <div class="modal-background"></div>
     </modal>
+
+    <modal [id]="modelDialog.createRoom">
+        <div class="modal"
+             (click)="closeModal($event, modelDialog.createRoom)">
+            <div class="modal-wrapper remind-password">
+                <button class="close-icon"
+                        (click)="closeModal(modelDialog.createRoom.toString());"> <fa-icon [icon]="faTimes"></fa-icon></button>
+
+                <room-dialog></room-dialog>
+            </div>
+        </div>
+        <div class="modal-background"></div>
+    </modal>
 </div>
