--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -314,7 +314,13 @@ body {
     width: 100%;
     bottom: 0;
 }
-#frame #sidepanel #bottom-bar button {
+.group-btn{
+    display: flex;
+}
+.group-btn span{
+    padding-left: 5px;
+}
+.group-btn button {
     float: left;
     border: none;
     width: 50%;
@@ -332,14 +338,14 @@ body {
         padding: 15px 0;
     }
 }
-#frame #sidepanel #bottom-bar button:focus {
+.group-btn button:focus {
     outline: none;
 }
-#frame #sidepanel #bottom-bar button:nth-child(1) {
+.group-btn button:nth-child(1) {
     border-right: 1px solid #2c3e50;
 }
 @media screen and (max-width: 735px) {
-    #frame #sidepanel #bottom-bar button:nth-child(1) {
+    .group-btn  button:nth-child(1) {
         border-right: none;
         border-bottom: 1px solid #2c3e50;
     }
