--- a/front/src/app/modules/shared/components/modal-dialogs/components/room/room-dialog.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/components/room/room-dialog.component.html
@@ -32,6 +32,24 @@
                 </div>
             </div>
 
+            <div [class]="'form-group'">
+                <label for="pTitle"
+                       class="form-control-label">Invite users</label>
+
+                <ng-select [items]="inviteUsers"
+                           bindLabel="name"
+                           bindValue="id"
+                           [addTag]="addCustomUser"
+                           [multiple]="true"
+                           placeholder="Select user"
+                           formControlName = "inviteUsersId">
+                </ng-select>
+                <!--<div *ngIf="inputTitle.errors && inputTitle.errors.message"-->
+                     <!--class="invalid-feedback form-control-feedback">-->
+                    <!--<div [innerText]="inputTitle.errors.message"></div>-->
+                <!--</div>-->
+            </div>
+
             <div class="text-center">
                 <button class="btn btn-primary btn-sm"
                         [disabled]="form.pristine || form.invalid"
