front: change picture by default & add chat components

--- a/front/src/app/modules/main/components/contact-panel/contact-panel.component.css
+++ b/front/src/app/modules/main/components/contact-panel/contact-panel.component.css
@@ -1,3 +1,6 @@
-
+.list-contacts .avatar {
+  margin-right: 10px; }
+.list-contacts .meta .name {
+  margin-bottom: 0; }
 
 /*# sourceMappingURL=contact-panel.component.css.map */
