--- a/front/src/app/modules/shared/components/modal-dialogs/components/room/room-dialog.component.html
+++ b/front/src/app/modules/shared/components/modal-dialogs/components/room/room-dialog.component.html
@@ -45,9 +45,9 @@
                            placeholder="Select user"
                            formControlName = "inviteUsersId">
                 </ng-select>
-                <!--<div *ngIf="inputTitle.errors && inputTitle.errors.message"-->
+                <!--<div *ngIf="inputTitle.errors && inputTitle.errors.chat-message"-->
                      <!--class="invalid-feedback form-control-feedback">-->
-                    <!--<div [innerText]="inputTitle.errors.message"></div>-->
+                    <!--<div [innerText]="inputTitle.errors.chat-message"></div>-->
                 <!--</div>-->
             </div>
 
