--- a/front/src/app/modules/main/components/layout/layout.component.css
+++ b/front/src/app/modules/main/components/layout/layout.component.css
@@ -1,3 +1,3 @@
 @import url(~@ng-select/ng-select/themes/default.theme.css);
 
-/*# sourceMappingURL=dashboard.component.css.mapmap */
+/*# sourceMappingURL=layout.component.css.map */
