--- a/front/src/app/modules/main/components/side-part/side-part.component.scss
+++ b/front/src/app/modules/main/components/side-part/side-part.component.scss
@@ -14,10 +14,17 @@
 }
 
 .avatar{
-    width: 40px;
-    border-radius: 50%;
     float: left;
     margin: 9px 12px 0 9px;
+
+    font-size: 16px;
+    background: black;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .home-instruction{
