--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -191,64 +191,64 @@ body {
 #frame #sidepanel #search input:-moz-placeholder {
     color: #f5f5f5;
 }
-#frame #sidepanel .list-contacts {
+.list-contacts {
     height: calc(100% - 177px);
     overflow-y: scroll;
     overflow-x: hidden;
 }
 @media screen and (max-width: 735px) {
-    #frame #sidepanel .list-contacts {
+    .list-contacts {
         height: calc(100% - 149px);
         overflow-y: scroll;
         overflow-x: hidden;
     }
-    #frame #sidepanel .list-contacts::-webkit-scrollbar {
+    .list-contacts::-webkit-scrollbar {
         display: none;
     }
 }
-#frame #sidepanel .list-contacts.expanded {
+.list-contacts.expanded {
     height: calc(100% - 334px);
 }
-#frame #sidepanel .list-contacts::-webkit-scrollbar {
+.list-contacts::-webkit-scrollbar {
     width: 8px;
     background: #2c3e50;
 }
-#frame #sidepanel .list-contacts::-webkit-scrollbar-thumb {
+.list-contacts::-webkit-scrollbar-thumb {
     background-color: #243140;
 }
-#frame #sidepanel .list-contacts ul li.contact {
+.list-contacts ul li.contact {
     position: relative;
     padding: 10px 0 15px 0;
     font-size: 0.9em;
     cursor: pointer;
 }
 @media screen and (max-width: 735px) {
-    #frame #sidepanel .list-contacts ul li.contact {
+    .list-contacts ul li.contact {
         padding: 6px 0 46px 8px;
     }
 }
-#frame #sidepanel .list-contacts ul li.contact:hover {
+.list-contacts ul li.contact:hover {
     background: #32465a;
 }
-#frame #sidepanel .list-contacts ul li.contact.active {
+.list-contacts ul li.contact.active {
     background: #32465a;
     border-right: 5px solid #435f7a;
 }
-#frame #sidepanel .list-contacts ul li.contact.active span.contact-status {
+.list-contacts ul li.contact.active span.contact-status {
     border: 2px solid #32465a !important;
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap {
+.list-contacts ul li.contact .wrap {
     width: 88%;
     margin: 0 auto;
     position: relative;
     height: 40px;
 }
 @media screen and (max-width: 735px) {
-    #frame #sidepanel .list-contacts ul li.contact .wrap {
+    .list-contacts ul li.contact .wrap {
         width: 100%;
     }
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap span {
+.list-contacts ul li.contact .wrap span {
     position: absolute;
     left: 0;
     margin: -2px 0 0 -2px;
@@ -258,38 +258,38 @@ body {
     border: 2px solid #2c3e50;
     background: #95a5a6;
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap span.online {
+.list-contacts ul li.contact .wrap span.online {
     background: #2ecc71;
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap span.away {
+.list-contacts ul li.contact .wrap span.away {
     background: #f1c40f;
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap span.busy {
+.list-contacts ul li.contact .wrap span.busy {
     background: #e74c3c;
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap img {
+.list-contacts ul li.contact .wrap img {
     width: 40px;
     border-radius: 50%;
     float: left;
     margin-right: 10px;
 }
 @media screen and (max-width: 735px) {
-    #frame #sidepanel .list-contacts ul li.contact .wrap img {
+    .list-contacts ul li.contact .wrap img {
         margin-right: 0px;
     }
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap .meta {
+.list-contacts ul li.contact .wrap .meta {
     padding: 5px 0 0 0;
 }
 @media screen and (max-width: 735px) {
-    #frame #sidepanel .list-contacts ul li.contact .wrap .meta {
+    .list-contacts ul li.contact .wrap .meta {
         display: none;
     }
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap .meta .name {
+.list-contacts ul li.contact .wrap .meta .name {
     font-weight: 600;
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap .meta .preview {
+.list-contacts ul li.contact .wrap .meta .preview {
     margin: 5px 0 0 0;
     padding: 0 0 1px;
     font-weight: 400;
@@ -301,7 +301,7 @@ body {
     -webkit-transition: 1s all ease;
     transition: 1s all ease;
 }
-#frame #sidepanel .list-contacts ul li.contact .wrap .meta .preview span {
+.list-contacts ul li.contact .wrap .meta .preview span {
     position: initial;
     border-radius: initial;
     background: none;
@@ -577,7 +577,7 @@ app-root{
     width: 50px;
     border-radius: 50%;
     padding: 3px;
-    border: 2px solid #e74c3c;
+    border: 2px solid #555;
     height: 50px;
     cursor: pointer;
     transition: 0.3s border ease;
