front: add chat components

--- a/front/src/app/modules/main/components/chat-panel/components/chat-dashboard/chat-dashboard.component.css
+++ b/front/src/app/modules/main/components/chat-panel/components/chat-dashboard/chat-dashboard.component.css
@@ -1,3 +1,4 @@
+.message-input .wrap input {
+  height: 48px; }
 
-
-/*# sourceMappingURL=chat-dashboard.component.csscss.map */
+/*# sourceMappingURL=chat-dashboard.component.css.map */
