--- a/front/src/app/modules/main/components/layout/layout.component.html
+++ b/front/src/app/modules/main/components/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div class="chat-module">
   <modal-dialogs></modal-dialogs>
 
-  <div id="frame">
+  <div id="frame" class="frame-layout">
     <side-part></side-part>
 
     <home-part *ngIf="layout.isModeHome()"></home-part>
