--- a/front/src/app/modules/main/components/layout/layout.component.scss
+++ b/front/src/app/modules/main/components/layout/layout.component.scss
@@ -1,1 +1,9 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
+
+.frame-layout{
+  height: 100vh;
+}
+
+.container-fluid{
+  padding-right: 0;
+}
