--- a/front/src/app/modules/main/components/chat-panel/components/chat-head/chat-head.component.html
+++ b/front/src/app/modules/main/components/chat-panel/components/chat-head/chat-head.component.html
@@ -1,4 +1,4 @@
-<div class="contact-profile">
+<div class="contact-profile d-flex flex-row justify-content-between">
     <div class="item d-flex flex-row"
          *ngIf="room">
         <div class="avatar"
@@ -6,14 +6,19 @@
         <div class="d-flex flex-column">
             <p class="title"
                [innerText]="room.getTitle()"></p>
-            <!--<p class="text"-->
-               <!--[innerText]="room.getCountParticipants() + ' participants'"></p>-->
+            <p class="text"
+               [innerText]="room.getCountParticipants() + ' participants'"></p>
         </div>
     </div>
 
-    <div class="social-media">
+    <div class="social-media d-flex align-items-center">
         <i class="fa fa-facebook" aria-hidden="true"></i>
         <i class="fa fa-twitter" aria-hidden="true"></i>
         <i class="fa fa-instagram" aria-hidden="true"></i>
     </div>
+
+    <div class="d-flex align-items-center">
+        <auth-panel></auth-panel>
+    </div>
+
 </div>
