--- a/front/src/app/modules/main/components/chat-panel/components/chat-message/chat-message.component.html
+++ b/front/src/app/modules/main/components/chat-panel/components/chat-message/chat-message.component.html
@@ -1,36 +1,41 @@
-<div class="messages">
-    <ul>
-        <li class="sent">
-            <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-            <p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?!</p>
-        </li>
-        <li class="replies">
-            <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-            <p>When you're backed against the wall, break the god damn thing down.</p>
-        </li>
-        <li class="replies">
-            <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-            <p>Excuses don't win championships.</p>
-        </li>
-        <li class="sent">
-            <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-            <p>Oh yeah, did Michael Jordan tell you that?</p>
-        </li>
-        <li class="replies">
-            <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-            <p>No, I told him that.</p>
-        </li>
-        <li class="replies">
-            <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-            <p>What are your choices when someone puts a gun to your head?</p>
-        </li>
-        <li class="sent">
-            <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
-            <p>What are you talking about? You do what they say or they shoot you.</p>
-        </li>
-        <li class="replies">
-            <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">
-            <p>Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a hundred and forty six other things.</p>
-        </li>
-    </ul>
+<div class="container-messages align-items-end d-flex messages">
+    <!--<ul>-->
+        <!--<li class="sent">-->
+            <!--<img src="http://emilcarlsson.se/assets/mikeross.png" alt="">-->
+            <!--<p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?!</p>-->
+        <!--</li>-->
+        <!--<li class="replies">-->
+            <!--<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="">-->
+            <!--<p>When you're backed against the wall, break the god damn thing down.</p>-->
+        <!--</li>-->
+    <!--</ul>-->
+
+    <div class="invite-container d-flex">
+        <ul>
+            <li class="d-flex flex-column invite justify-content-center w-100">
+                <img src="http://emilcarlsson.se/assets/mikeross.png" alt="">
+                <p [innerHtml]=""></p>
+                <div class="btn-group">
+                    <button class="btn btn-primary">Agree</button>
+                    <button class="btn btn-default">Disagree</button>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <!--<ng-template *ngIf="true">-->
+        <!--<div class="invite-container">-->
+            <!--<ul>-->
+                <!--<li class="invite align-items-center">-->
+                    <!--<img src="http://emilcarlsson.se/assets/mikeross.png" alt="">-->
+                    <!--<p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?!</p>-->
+                    <!--<div class="btn-group">-->
+                        <!--<button class="btn btn-primary">Agree</button>-->
+                        <!--<button class="btn btn-default">Disagree</button>-->
+                    <!--</div>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</div>-->
+    <!--</ng-template>-->
+
 </div>
