--- a/front/src/app/modules/main/components/layout/layout.component.css
+++ b/front/src/app/modules/main/components/layout/layout.component.css
@@ -1,3 +1,8 @@
 @import url(~@ng-select/ng-select/themes/default.theme.css);
+.frame-layout {
+  height: 100vh; }
+
+.container-fluid {
+  padding-right: 0; }
 
 /*# sourceMappingURL=layout.component.css.map */
